feat: Implement PAC Script Detail page & Fix CORS
- Add PacScriptDetail.vue with Remote/Manual modes
- Implement auto-fetch for PAC scripts using background relay (CORS bypass)
- Update sidebar and router for PAC management
- Fix various UI issues (dark mode contrast, layout min-width, fixed height editor)

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -19,5 +19,14 @@
       "js": ["src/content/index.js"]
     }
   ],
-  "permissions": ["proxy", "storage", "alarms"]
+  "permissions": [
+    "alarms",
+    "contextMenus",
+    "downloads",
+    "webRequest",
+    "webRequestAuthProvider",
+    "unlimitedStorage",
+    "storage",
+    "proxy"],
+  "host_permissions": ["*://*/*"]
 }
