--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,6 +5,11 @@
   "action": {
     "default_popup": "src/popup/index.html"
   },
+  "icons": {
+    "16": "src/assets/icons/logo.png",
+    "48": "src/assets/icons/logo.png",
+    "128": "src/assets/icons/logo-128.png"
+  },
   "options_ui": {
     "page": "src/options/index.html",
     "open_in_tab": true
