feat: Implement connection monitoring feature with a popup UI displaying domains and IPs, backed by background script data collection.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -32,6 +32,7 @@
     "webRequestAuthProvider",
     "unlimitedStorage",
     "storage",
-    "proxy"],
+    "proxy",
+    "webNavigation"],
   "host_permissions": ["*://*/*"]
 }
