feat: Introduce a downloads sidepanel, update design system documentation, and add new application icons.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -33,6 +33,11 @@
     "unlimitedStorage",
     "storage",
     "proxy",
-    "webNavigation"],
+    "webNavigation",
+    "sidePanel"
+  ],
+  "side_panel": {
+    "default_path": "src/sidepanel/index.html"
+  },
   "host_permissions": ["*://*/*"]
 }
