--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Oasis Proxy",
+  "name": "Oasis Proxy 2",
   "version": "2.0.0",
   "action": {
     "default_popup": "src/popup/index.html"
