--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jsdom": "^27.4.0",
     "prettier": "^3.2.4",
     "vite": "^5.0.12",
+    "vite-plugin-static-copy": "^3.2.0",
     "vitest": "^4.0.17"
   }
 }
