--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,7 +5,8 @@
   "version": "2.0.0",
   "description": "__MSG_extDesc__",
   "action": {
-    "default_popup": "src/popup/index.html"
+    "default_popup": "src/popup/index.html",
+    "default_title": "__MSG_extName__"
   },
   "icons": {
     "16": "src/assets/icons/light/ripple-icon-light-16x16-blurred-whitebg.png",
