--- a/package.json
+++ b/package.json
@@ -14,24 +14,24 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.2",
+    "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
-    "vue": "^3.4.15",
-    "vue-router": "^4.6.4"
+    "vue": "^3.5.28",
+    "vue-router": "^5.0.2"
   },
   "devDependencies": {
-    "@crxjs/vite-plugin": "^2.0.0-beta.23",
+    "@crxjs/vite-plugin": "^2.3.0",
     "@rushstack/eslint-patch": "^1.15.0",
-    "@vitejs/plugin-vue": "^5.0.3",
-    "@vue/eslint-config-prettier": "^9.0.0",
+    "@vitejs/plugin-vue": "^6.0.4",
+    "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/test-utils": "^2.4.6",
-    "eslint": "^8.56.0",
-    "eslint-plugin-vue": "^9.21.1",
-    "happy-dom": "^20.3.4",
-    "jsdom": "^27.4.0",
-    "prettier": "^3.2.4",
-    "vite": "^5.0.12",
+    "eslint": "^10.0.0",
+    "eslint-plugin-vue": "^10.8.0",
+    "happy-dom": "^20.6.1",
+    "jsdom": "^28.1.0",
+    "prettier": "^3.8.1",
+    "vite": "^7.3.1",
     "vite-plugin-static-copy": "^3.2.0",
-    "vitest": "^4.0.17"
+    "vitest": "^4.0.18"
   }
 }
