--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,32 +25,63 @@ jobs:
         run: npm install || (ls -R /home/runner/.npm/_logs/ && cat /home/runner/.npm/_logs/*.log && exit 1)
 
       - name: Build Project
-        run: npm run build
+        run: npm run build:self
 
       - name: Restore Private Key
         run: echo "${{ secrets.EXTENSION_PRIVATE_KEY }}" > extension.pem
 
+      - name: Calculate Extension ID and Update XML
+        id: update_xml
+        run: |
+          # 1. Get Extension ID using the tool
+          # The tool outputs "Extension ID: <id>"
+          EXT_ID=$(node tools/generate_key.cjs extension.pem | grep "Extension ID:" | awk '{print $3}')
+          echo "Calculated Extension ID: $EXT_ID"
+
+          # 2. Get Version from ref (e.g. v2.0.1 -> 2.0.1)
+          VERSION=${GITHUB_REF_NAME#v}
+          echo "Version: $VERSION"
+
+          # 3. Define Codebase URL (GitHub Release Asset)
+          # Assuming the CRX will be named 'oasis-proxy-extension.crx' in the release
+          CODEBASE_URL="https://github.com/${{ github.repository }}/releases/download/${{ github.ref_name }}/oasis-proxy-extension.crx"
+
+          # 4. Update update_sample.xml
+          # We use a temporary file to avoid inline editing issues
+          cp update_sample.xml update.xml
+          sed -i "s/appid='.*'/appid='$EXT_ID'/" update.xml
+          sed -i "s/version='.*'/version='$VERSION'/" update.xml
+          sed -i "s|codebase='.*'|codebase='$CODEBASE_URL'|" update.xml
+
+          echo "Generated update.xml content:"
+          cat update.xml
+
       - name: Package Chrome Extension as CRX
         run: |
+          # Pack the extension
           google-chrome --pack-extension=$(pwd)/dist --pack-extension-key=$(pwd)/extension.pem
 
-      - name: Rename and Move CRX
+      - name: Prepare Release Files
         id: make_release_files
         run: |
           mkdir -p release
-          mv *.crx release/oasis-proxy-2-extension.crx
-          cd dist
-          zip -r ../release/oasis-proxy-2-extension.zip .
-          echo "The latest tag is ${{ github.ref }}"
-          echo "TAG_NAME=$(echo ${{ github.ref }} | awk -F '/' '{print $3}')" >> $GITHUB_OUTPUT
+          # Move CRX and rename to fixed name for consistency with codebase url
+          mv *.crx release/oasis-proxy-extension.crx
+          # Copy update.xml to release
+          cp update.xml release/update.xml
 
-      - name: Upload Artifact (ZIP)
+          cd dist
+          zip -r ../release/oasis-proxy-extension.zip .
+
+          echo "TAG_NAME=${{ github.ref_name }}" >> $GITHUB_OUTPUT
+
+      - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: oasisproxy-extension
+          name: oasisproxy-release
           path: release/
 
-      - name: release
+      - name: Create Release
         uses: ncipollo/release-action@v1
         with:
           tag: ${{ github.ref }}
