--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
+    "ipaddr.js": "^2.3.0",
     "vue": "^3.5.28",
     "vue-router": "^5.0.2"
   },
